[package]
name = "uefi-pg"
version = "0.1.0"
authors = ["Nerry <108566+neri@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { git = "https://github.com/rust-osdev/uefi-rs.git" }
# acpi = { path = "./ext/acpi" }
acpi = { git = "https://github.com/rust-osdev/acpi" }
aml = { git = "https://github.com/rust-osdev/acpi" }
bitflags = {}

[profile.release]
opt-level = "z"
