[package]
authors = ["Nerry <108566+neri@users.noreply.github.com>"]
edition = "2021"
name = "kernel"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [features]

[dependencies]
bootprot = { path = "../lib/bootprot" }
megstd = { path = "../lib/megstd", default-features = false, features = ["kernel"] }
myacpi = { path = "../lib/myacpi" }
myos-archive = { path = "../lib/mar/" }

# wami = { git = "https://github.com/neri/wami" }
wami = { path = "../../wami", default-features = false }

# aml = { git = "https://github.com/rust-osdev/acpi" }
byteorder = { default-features = false }
futures-util = { default-features = false, features = ["alloc"] }
num-derive = { default-features = false }
num-traits = { default-features = false }
paste = {}
seq-macro = {}

ab_glyph = { default-features = false, features = ["libm"] }
libm = {}

mpic = { git = "https://github.com/neri/mpic", default-features = false, features = ["alloc"] }
png-decoder = { default-features = false, git = "https://github.com/neri/png-decoder" }
rapid-qoi = { default-features = false, features = ["alloc"] }
zune-jpeg = { default-features = false }

[profile.release]
lto = true
opt-level = 3
panic = "abort"

[profile.dev]
panic = "abort"
