[package]
authors = ["Nerry <108566+neri@users.noreply.github.com>"]
edition = "2021"
name = "boot-efi"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = {}
bootprot = {path = "../../lib/bootprot"}
byteorder = {default-features = false}
cfg-if = {}
lib-efi = {path = "../lib-efi"}
uefi = {features = ['alloc']}
uefi-services = {default-features = false}
