[package]
authors = ["Nerry <108566+neri@users.noreply.github.com>"]
edition = "2021"
name = "boot-efi"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootprot = {path = "../../lib/bootprot"}
lib-efi = {path = "../lib-efi"}
myelf = {path="../../lib/myelf"}
x86 = {path="../../lib/x86"}

bitflags = {}
# byteorder = {default-features = false}
uefi = {features = ['alloc']}
uefi-services = {default-features = false}
