[package]
authors = ["Nerry <108566+neri@users.noreply.github.com>"]
edition = "2018"
name = "lib-efi"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = {version = "1"}
# byteorder = {version = "1", default-features = false}
# serde = {version = "1", default-features = false, features = ["derive"]}
# serde-json-core = {version = "0.2.0"}
uefi = {version = "0.11.0"}
