[package]
authors = ["Nerry <108566+neri@users.noreply.github.com>"]
edition = "2021"
name = "meggl"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = {default-features = false}
num-derive = {default-features = false}
num-traits = {default-features = false}
rapid-qoi = {default-features = false, features = ["alloc"]}
