[package]
authors = ["Nerry <108566+neri@users.noreply.github.com>"]
edition = "2021"
name = "megstd"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["wasm"]
game = []
kernel = []
wasm = ["window", "game"]
window = []

[dependencies]
meggl = {path = "../meggl/"}

bitflags = {default-features = false}
cfg-if = {}
num-derive = {default-features = false}
num-traits = {default-features = false}
