[package]
authors = ["Nerry <108566+neri@users.noreply.github.com>"]
edition = "2021"
name = "wasm"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2"
# byteorder = {version = "1.3.4", default-features = false}
num-derive = {version = "0.2", default-features = false}
num-traits = {version = "0.2", default-features = false}
