[package]
authors = ["Nerry <108566+neri@users.noreply.github.com>"]
edition = "2018"
name = "boot-efi"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2"
bootprot = {path = "../bootprot"}
byteorder = {version = "1.3.4", default-features = false}
rlibc = "1.0.0"
serde = {version = "1.0", default-features = false, features = ["derive"]}
serde-json-core = "0.1.0"
uefi = {git = "https://github.com/rust-osdev/uefi-rs.git"}
