[package]
authors = ["Nerry <108566+neri@users.noreply.github.com>"]
edition = "2018"
name = "kernel"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [features]

[dependencies]
# acpi = {path = "../../../ext/acpi/acpi"}
acpi = {git = "https://github.com/rust-osdev/acpi"}
# aml = {git = "https://github.com/rust-osdev/acpi"}
bitflags = "1.2"
bootprot = {path = "../bootprot"}
byteorder = {version = "1.3.4", default-features = false}
crossbeam-queue = {version = "0.2.1", default-features = false, features = ["alloc"]}
futures-util = {default-features = false, features = ["alloc"], version = "0.3.4"}
rlibc = "1.0.0"
