[package]
authors = ["Nerry <108566+neri@users.noreply.github.com>"]
edition = "2018"
name = "kernel"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [features]

[dependencies]
bootprot = {path = "../../lib/bootprot"}
megosabi = {path = "../../lib/megosabi"}
megstd = {path = "../../lib/megstd", default-features = false, features = ["kernel"]}
wasm = {path = "../../lib/wasm"}

acpi = {git = "https://github.com/rust-osdev/acpi"}
# aml = {git = "https://github.com/rust-osdev/acpi"}
bitflags = {version = "1"}
byteorder = {version = "1", default-features = false}
futures-util = {default-features = false, features = ["alloc"], version = "0.3"}
num-derive = {version = "0.2", default-features = false}
num-traits = {version = "0.2", default-features = false}
seq-macro = {version = "0.2"}
