[package]
authors = ["Nerry <108566+neri@users.noreply.github.com>"]
edition = "2021"
name = "kernel"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [features]

[dependencies]
bootprot = {path = "../../lib/bootprot"}
megstd = {path = "../../lib/megstd", default-features = false, features = ["kernel"]}
myacpi = {path = "../../lib/myacpi"}
wasm = {path = "../../lib/wasm"}

# aml = {git = "https://github.com/rust-osdev/acpi"}
ab_glyph = {default-features = false, features = ["libm"]}
bitflags = {}
byteorder = {default-features = false}
cfg-if = {}
futures-util = {default-features = false, features = ["alloc"]}
libm = {}
num-derive = {default-features = false}
num-traits = {default-features = false}
paste = {}
seq-macro = {}
